<resources>

    <string name="app_name">Kvappka</string>
    <string name="signed_in_fmt" translatable="false">Signed in as: %s</string>
    <string name="signing_in" translatable="false">Signing in…</string>
    <string name="signed_out" translatable="false">Signed out</string>
    <string name="signed_in_err" translatable="false">"Error: please check logs."</string>
    <string name="login_name">Login email</string>
    <string name="login_password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
    <string name="button">To app</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="post">Post</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_donorplaces">Donor Places</string>

    <string name="action_settings">Nastavenia</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_test_drawer" translatable="false">TestDrawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_friends">Friends</string>


    <string name="facebook_app_id" translatable="false">130882630837030</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb130882630837030</string>
    <string name="title_activity_places">Donor Places</string>
    <string name="title_activity_drawer">Drawer Activity</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="day">day</string>
    <string name="applicationLanguageSettingListTitle">Choose Language</string>
    <string name="notificationSettingCheckBoxDesc">Stay in touch with news</string>
    <string name="notificationSettingCheckBox">Notification</string>
    <string name="title_activity_donations">Donations</string>
    <string name="exactTimeNotife">Notife time</string>
    <string name="notifyTimeExactSummary">Notify Sumary</string>
    <string name="delete">Delete</string>
    <string name="donationsListRemoved">removed from list!</string>
    <string name="title_activity_post">title_activity_post</string>
    <string name="emptyListTextView">Register your donations for notifications and your own statistics by tapping on \"+\"</string>
    <string name="notification7DaysTitle">Donation time reminder</string>
    <string name="notification7DaysContent">Possible donation time coming in 7 days</string>
    <string name="notification1DaysTitle">Donation time reminder</string>
    <string name="notification1DaysContent">Possible donation time coming in 1 day</string>

    <string-array name="pref_lang_list_array_entries">
        <item>Slovencina</item>
        <item>English</item>
    </string-array>

    <string-array name="pref_lang_list_array_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="menu_statistics">Statistics</string>
    <string name="numberOfDonationsProfile">No. of donations</string>
    <string name="lastDateOfDonationsProfile">Last donation</string>
    <string name="numberOfDaysToDanateProfile">Days to donate</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="birthDate">Birth date</string>
    <string name="wrong_birth_date">Wrong birth date</string>
    <string name="explanation_new_user">Please verify or update following values. Actual data are essential for the application to function properly</string>
    <string name="save">Save</string>
    <string name="register_now">Register now!</string>
    <string name="notifications_category">Notifications</string>
    <string name="notificationSettingPostNotify">Get notified about new posts</string>
    <string name="notificationSettingDonationsNotify">Get notified when donation time incoming</string>
    <string name="language_category">Language</string>


    <string-array name="bloodGroupsArray">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>0</item>
    </string-array>

    <string-array name="donationPlacesArray">
        <item>Bratislava - Kramáre</item>
        <item>Bratislava - Ružinov</item>
        <item>Bánska Bystrica</item>
        <item>Košice</item>
        <item>Martin</item>
        <item>Nitra</item>
        <item>Nové zámky</item>
        <item>Poprad</item>
        <item>Prešov</item>
        <item>Trenčín</item>
        <item>Trnava</item>
        <item>Žilina</item>
    </string-array>

    <string name="dialogTitleDonationPlace">Donation Place</string>
    <string name="register">Register</string>
    <string name="emailFromat">email@email.com</string>
    <string name="welcomeNewUser">Hello donator!</string>
    <string name="title_activity_info">About donation</string>
    <string name="repeatPassword">Repeat passworfd</string>
    <string name="setPassword">Set password</string>
    <string name="undo_snackbar">UNDO</string>
    <string name="post_new_dialog_title">Add a new post</string>
    <string name="post_new_dialog_message">Write your request here</string>
    <string name="post_dialog_add">Add</string>
    <string name="post_dialog_cancel">Cancel</string>
    <string name="previous">Prev</string>
    <string name="finish">Finish</string>
    <string name="slide_desc_posts">Add post by tapping on \"+\" in Action bar</string>
    <string name="slide_desc_list">Deleting list with swipe to left gesture</string>
    <string name="slide_desc_gelocation">Localization is for better navigation in places</string>
    <string name="slide_head_gelocation">Allow access to location</string>
    <string name="slide_head_list">Manage your list</string>
    <string name="slide_head_post">Add new post!</string>
    <string name="notificationPostTitle">Hello! Check new posts</string>
    <string name="notificationPostContent">Lets see whats new</string>
</resources>