<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_profile_menu"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_posts" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_menu_friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_donations" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/menu_donorplaces"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="Misc">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/title_activity_info" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
