<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:context="com.example.martin.login.PlacesActivity" />

    <LinearLayout
        android:id="@+id/placeInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/placesTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bratislava - Kramare"
            android:textSize="24sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/placesTxtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limbová 3, 833 14 Bratislava"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/placesTxtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="kramarents@ntssr.sk"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/openedTimeTableHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/opening_hours"
            android:textSize="18sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow android:id="@+id/tableRow0">

                <TextView
                    android:id="@+id/openedTimeTableHeadingDay"
                    android:layout_column="1"
                    android:text="@string/day"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/openedTimeTableHeadingTimeFrom"
                    android:layout_column="2"
                    android:text="@string/from"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/openedTimeTableHeadingTimeTo"
                    android:layout_column="3"
                    android:text="@string/to"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:id="@+id/tableRow1">

                <TextView
                    android:id="@+id/openedTimeTableDay1"
                    android:layout_column="1"
                    android:text="@string/monday" />

                <TextView
                    android:id="@+id/openedTimeTableTimeFrom1"
                    android:layout_column="2"
                    android:text="od 07:00" />

                <TextView
                    android:id="@+id/openedTimeTableTimeTo1"
                    android:layout_column="3"
                    android:text="do 14:00" />
            </TableRow>

            <TableRow android:id="@+id/tableRow2">

                <TextView
                    android:id="@+id/openedTimeTableDay2"
                    android:layout_column="1"
                    android:text="@string/tuesday" />

                <TextView
                    android:id="@+id/openedTimeTableTimeFrom2"
                    android:layout_column="2"
                    android:text="od 07:00" />

                <TextView
                    android:id="@+id/openedTimeTableTimeTo2"
                    android:layout_column="3"
                    android:text="do 14:00" />
            </TableRow>

            <TableRow android:id="@+id/tableRow3">

                <TextView
                    android:id="@+id/openedTimeTableDay3"
                    android:layout_column="1"
                    android:text="@string/wednesday" />

                <TextView
                    android:id="@+id/openedTimeTableTimeFrom3"
                    android:layout_column="2"
                    android:text="od 07:00" />

                <TextView
                    android:id="@+id/openedTimeTableTimeTo3"
                    android:layout_column="3"
                    android:text="do 14:00" />
            </TableRow>

            <TableRow android:id="@+id/tableRow4">

                <TextView
                    android:id="@+id/openedTimeTableDay4"
                    android:layout_column="1"
                    android:text="@string/thursday" />

                <TextView
                    android:id="@+id/openedTimeTableTimeFrom4"
                    android:layout_column="2"
                    android:text="od 07:00" />

                <TextView
                    android:id="@+id/openedTimeTableTimeTo4"
                    android:layout_column="3"
                    android:text="do 14:00" />
            </TableRow>

            <TableRow android:id="@+id/tableRow5">

                <TextView
                    android:id="@+id/openedTimeTableDay5"
                    android:layout_column="1"
                    android:text="@string/friday" />

                <TextView
                    android:id="@+id/openedTimeTableTimeFrom5"
                    android:layout_column="2"
                    android:text="od 07:00" />

                <TextView
                    android:id="@+id/openedTimeTableTimeTo5"
                    android:layout_column="3"
                    android:text="do 14:00" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/placesTxtWebSite"
            android:text="Link to WebInfo"
            android:paddingTop="10dp"/>
    </LinearLayout>
</LinearLayout>